--- a/index.html
+++ b/index.html
@@ -3,69 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plano de Estoque - Hotel Recanto Wirapuru</title>
+    <title>Plano de Estoque - Supermercado</title>
     <link rel="stylesheet" href="style.css">
-</head>
+
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#007bff"/> </head>
 <body>
     <div class="container">
-        <h1>Plano de Estoque - Hotel Recanto Wirapuru</h1>
+        <h1>Plano de Estoque do Supermercado</h1>
 
         <div class="add-material">
             <h2>Adicionar/Atualizar Material</h2>
             <select id="materialName">
-    <option value="">Selecione um Material</option>
-    <option value="ARROZ BRANCO 1KG">ARROZ BRANCO 1KG</option>
-    <option value="ARROZ PARBORIZADO 1KG">ARROZ PARBORIZADO 1KG</option>
-    <option value="ARROZ INTEGRAL 1KG">ARROZ INTEGRAL 1KG</option>
-    <option value="AZEITE 500ML">AZEITE 500ML</option>
-    <option value="BATATA PALHA PCT 800g">BATATA PALHA PCT 800g</option>
-    <option value="OLEO 900ML">OLEO 900ML</option>
-    <option value="FARINHA DE TRIGO 1KG">FARINHA DE TRIGO 1KG</option>
-    <option value="FARINHA AMARELA 1KG">FARINHA AMARELA 1KG</option>
-    <option value="MACARRAO ESPAGUETE 400G">MACARRAO ESPAGUETE 400G</option>
-    <option value="MACARRAO INTEGRAL 500G">MACARRAO INTEGRAL 500G</option>
-    <option value="AÇUCAR 1KG">AÇUCAR 1KG</option>
-    <option value="FEIJÃO DE CORDA 1KG">FEIJÃO DE CORDA 1KG</option>
-    <option value="FEIJÃO PRETO 1KG">FEIJÃO PRETO 1KG</option>
-    <option value="MASSA DE MILHO FLOCÃO 500G">MASSA DE MILHO FLOCÃO 500G</option>
-    <option value="CAFÉ 250G">CAFÉ 250G</option>
-    <option value="CREME CULINÁRIO 1KG">CREME CULINÁRIO 1KG</option>
-    <option value="MOLHO DE TOMATE 1,7KG">MOLHO DE TOMATE 1,7KG</option>
-    <option value="PURE DE BATATA Pct 1kg">PURE DE BATATA Pct 1kg</option>
-    <option value="COLORAL 1KG">COLORAL 1KG</option>
-    <option value="CALDO DE GALINHA 1KG">CALDO DE GALINHA 1KG</option>
-    <option value="CALDO DE CARNE 1KG">CALDO DE CARNE 1KG</option>
-    <option value="AZEITONA BALDE 2KG">AZEITONA BALDE 2KG</option>
-    <option value="MAIONESE BALDE 3KG">MAIONESE BALDE 3KG</option>
-    <option value="MOSTARDA 3,3kg">MOSTARDA 3,3kg</option>
-    <option value="VINAGRE 500ML">VINAGRE 500ML</option>
-    <option value="BARBECUE 3,5kg">BARBECUE 3,5kg</option>
-    <option value="MILHO ENLATADO 280G">MILHO ENLATADO 280G</option>
-    <option value="ERVILHA ENLATADA 280G">ERVILHA ENLATADA 280G</option>
-    <option value="MARGARINA BALDE 15KG">MARGARINA BALDE 15KG</option>
-    <option value="SAL 1KG">SAL 1KG</option>
-    <option value="MOLHO P/ SALADA ITALIANO 240ML">MOLHO P/ SALADA ITALIANO 240ML</option>
-    <option value="MOLHO P/ SALADA PARMESAO 240ML">MOLHO P/ SALADA PARMESAO 240ML</option>
-    <option value="MOLHO P/ SALADA MOSTARDA 240 ML">MOLHO P/ SALADA MOSTARDA 240 ML</option>
-    <option value="MOLHO P/ SALADA LIMAO 240 ML">MOLHO P/ SALADA LIMAO 240 ML</option>
-    <option value="MOLHO P/ SALADA CAESAR 240 ML">MOLHO P/ SALADA CAESAR 240 ML</option>
-    <option value="MOLHO P/ SALADA ROSE 240 ML">MOLHO P/ SALADA ROSE 240 ML</option>
-    <option value="MOLHO P/ SALADA QUEIJO 240 ML">MOLHO P/ SALADA QUEIJO 240 ML</option>
-    <option value="BISCOITO INTEGRAL">BISCOITO INTEGRAL</option>
-    <option value="BISCOITO MAIZENA">BISCOITO MAIZENA</option>
-    <option value="FÓSFORO EXTRA LONGO">FÓSFORO EXTRA LONGO</option>
-    <option value="GELATINA DIET ZERO, AÇUCAR">GELATINA DIET ZERO, AÇUCAR</option>
-    <option value="SAL SACHE CX/2000">SAL SACHE CX/2000</option>
-    <option value="AÇUCAR SACHE CX/1000">AÇUCAR SACHE CX/1000</option>
-    <option value="ADOÇANTE SACHE CX/1000">ADOÇANTE SACHE CX/1000</option>
-    <option value="LEITE DESNATADO 1L">LEITE DESNATADO 1L</option>
-    <option value="LEITE INTEGRAL 1L">LEITE INTEGRAL 1L</option>
-    <option value="LEITE ZERO LACTOSE 1L">LEITE ZERO LACTOSE 1L</option>
-    <option value="MUCILON MILHO 180G">MUCILON MILHO 180G</option>
-    <option value="MUCILON ARROZ 180G">MUCILON ARROZ 180G</option>
-    <option value="FARINHA DE AVEIA 170G">FARINHA DE AVEIA 170G</option>
-    <option value="MOLHO SHOYO">MOLHO SHOYO</option>
-</select>
+                <option value="">Selecione um Material</option>
+                <option value="ARROZ BRANCO 1KG">ARROZ BRANCO 1KG</option>
+                <option value="ARROZ PARBORIZADO 1KG">ARROZ PARBORIZADO 1KG</option>
+                <option value="ARROZ INTEGRAL 1KG">ARROZ INTEGRAL 1KG</option>
+                <option value="AZEITE 500ML">AZEITE 500ML</option>
+                <option value="BATATA PALHA PCT 800g">BATATA PALHA PCT 800g</option>
+                <option value="OLEO 900ML">OLEO 900ML</option>
+                <option value="FARINHA DE TRIGO 1KG">FARINHA DE TRIGO 1KG</option>
+                <option value="FARINHA AMARELA 1KG">FARINHA AMARELA 1KG</option>
+                <option value="MACARRAO ESPAGUETE 400G">MACARRAO ESPAGUETE 400G</option>
+                <option value="MACARRAO INTEGRAL 500G">MACARRAO INTEGRAL 500G</option>
+                <option value="AÇUCAR 1KG">AÇUCAR 1KG</option>
+                <option value="FEIJÃO DE CORDA 1KG">FEIJÃO DE CORDA 1KG</option>
+                <option value="FEIJÃO PRETO 1KG">FEIJÃO PRETO 1KG</option>
+                <option value="MASSA DE MILHO FLOCÃO 500G">MASSA DE MILHO FLOCÃO 500G</option>
+                <option value="CAFÉ 250G">CAFÉ 250G</option>
+                <option value="CREME CULINÁRIO 1KG">CREME CULINÁRIO 1KG</option>
+                <option value="MOLHO DE TOMATE 1,7KG">MOLHO DE TOMATE 1,7KG</option>
+                <option value="PURE DE BATATA Pct 1kg">PURE DE BATATA Pct 1kg</option>
+                <option value="COLORAL 1KG">COLORAL 1KG</option>
+                <option value="CALDO DE GALINHA 1KG">CALDO DE GALINHA 1KG</option>
+                <option value="CALDO DE CARNE 1KG">CALDO DE CARNE 1KG</option>
+                <option value="AZEITONA BALDE 2KG">AZEITONA BALDE 2KG</option>
+                <option value="MAIONESE BALDE 3KG">MAIONESE BALDE 3KG</option>
+                <option value="MOSTARDA 3,3kg">MOSTARDA 3,3kg</option>
+                <option value="VINAGRE 500ML">VINAGRE 500ML</option>
+                <option value="BARBECUE 3,5kg">BARBECUE 3,5kg</option>
+                <option value="MILHO ENLATADO 280G">MILHO ENLATADO 280G</option>
+                <option value="ERVILHA ENLATADA 280G">ERVILHA ENLATADA 280G</option>
+                <option value="MARGARINA BALDE 15KG">MARGARINA BALDE 15KG</option>
+                <option value="SAL 1KG">SAL 1KG</option>
+                <option value="MOLHO P/ SALADA ITALIANO 240ML">MOLHO P/ SALADA ITALIANO 240ML</option>
+                <option value="MOLHO P/ SALADA PARMESAO 240ML">MOLHO P/ SALADA PARMESAO 240ML</option>
+                <option value="MOLHO P/ SALADA MOSTARDA 240 ML">MOLHO P/ SALADA MOSTARDA 240 ML</option>
+                <option value="MOLHO P/ SALADA LIMAO 240 ML">MOLHO P/ SALADA LIMAO 240 ML</option>
+                <option value="MOLHO P/ SALADA CAESAR 240 ML">MOLHO P/ SALADA CAESAR 240 ML</option>
+                <option value="MOLHO P/ SALADA ROSE 240 ML">MOLHO P/ SALADA ROSE 240 ML</option>
+                <option value="MOLHO P/ SALADA QUEIJO 240 ML">MOLHO P/ SALADA QUEIJO 240 ML</option>
+                <option value="BISCOITO INTEGRAL">BISCOITO INTEGRAL</option>
+                <option value="BISCOITO MAIZENA">BISCOITO MAIZENA</option>
+                <option value="FÓSFORO EXTRA LONGO">FÓSFORO EXTRA LONGO</option>
+                <option value="GELATINA DIET ZERO, AÇUCAR">GELATINA DIET ZERO, AÇUCAR</option>
+                <option value="SAL SACHE CX/2000">SAL SACHE CX/2000</option>
+                <option value="AÇUCAR SACHE CX/1000">AÇUCAR SACHE CX/1000</option>
+                <option value="ADOÇANTE SACHE CX/1000">ADOÇANTE SACHE CX/1000</option>
+                <option value="LEITE DESNATADO 1L">LEITE DESNATADO 1L</option>
+                <option value="LEITE INTEGRAL 1L">LEITE INTEGRAL 1L</option>
+                <option value="LEITE ZERO LACTOSE 1L">LEITE ZERO LACTOSE 1L</option>
+                <option value="MUCILON MILHO 180G">MUCILON MILHO 180G</option>
+                <option value="MUCILON ARROZ 180G">MUCILON ARROZ 180G</option>
+                <option value="FARINHA DE AVEIA 170G">FARINHA DE AVEIA 170G</option>
+                <option value="MOLHO SHOYO">MOLHO SHOYO</option>
             </select>
             <input type="number" id="materialQuantity" placeholder="Quantidade Atual" min="0">
             <input type="number" id="materialMinStock" placeholder="Estoque Mínimo Necessário" min="0">
@@ -93,5 +94,18 @@
     </div>
 
     <script src="script.js"></script>
-</body>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then(registration => {
+                        console.log('Service Worker registrado com sucesso:', registration);
+                    })
+                    .catch(error => {
+                        console.error('Falha no registro do Service Worker:', error);
+                    });
+            });
+        }
+    </script>
+    </body>
 </html>
