--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#007bff"/> </head>
 <body>
     <div class="container">
-        <h1>Plano de Estoque do Supermercado</h1>
+        <h1>Plano de Estoque - Hotel Recanto Wirapuru</h1>
 
         <div class="add-material">
             <h2>Adicionar/Atualizar Material</h2>
